# lidarRender

./: .gitignore  readme.md
cumesh/: CMakeLists.txt
cumesh/src/: binSearch4.cuh  common.h  cu_image.hpp  gpu_buffer.hpp  process_pc.cu  types.h
cumesh/src/align/: align.cu  align.h  corr.cu  test_align.cc
cumesh/src/app/: main.cc  test_mc.cc
cumesh/src/geo/: geodset.cc
cumesh/src/heightmap/: make.cu  make.h  make_geo.cu  make_geo.h  marching_cubes.cu  marching_cubes.h  octree.cu  octree.h  surface_net.cu
cumesh/src/las/: las_tiling.cc  read_las.cc  read_las.h
cumesh/src/optim/: sor.h
cumesh/src/viz/: camera.cc  camera.h  indexed_mesh.cc  indexed_mesh.h  viz_app.cc  viz_app.h  window.cc
heightmapMeshing/: occlusionAwareEngine.py  render.py  renderScene.py  voxelize.cu
heightmapMeshing/csrc/: bin_search.cuh  helper_cuda.hpp  normals.cu  surface_net.cc  surface_net.cu  utils.cu  voxelize.cu  voxelize.h
lidarRender/: occlusionAwareEngine.py  pointRenderer.py  pointRenderer2.py  pointRenderer4.py  pushPull.py  simple_dset.py
meshing/: CMakeLists.txt
meshing/experimental/: data.py  show.py
meshing/src/: common.h  dt.cc  dt.h  geodset.h  helper_cuda.hpp  main.cc
meshing/src/las/: las_tiling.cc  read_las.cc  read_las.h
meshing/src/recon/: binSearch.cuh  binSearch4.cuh  dt.cc  dt.h  octree_utils.cu  sorted_octree.cu  sorted_octree.h  torch_stuff.cc  torch_stuff.h  visibility.cu  vu.cu  vu.h
meshing/src/viz/: camera.cc  camera.h  indexed_mesh.cc  indexed_mesh.h  window.cc  window.h
tdt/: CMakeLists.txt
tdt/data/example2/: tileset.json
tdt/tdt/: camera.cc  camera.h  controllable_camera.cc  controllable_camera.h  extra_entities.cc  extra_entities.h  gltf.cc  gltf.h  gltf_entity.cc  gltf_entity.h  io.hpp  math.cc  math.h  render_context.cc  render_context.h  tdt.h  window.cc  window.h
tdt/tdt/tdtiles/: parse.cc  parse.h  sight.cc  sight.h  tile.cc
tdt/test/: print_info.cc  test.cc  test_serialize.cc  test_sight.cc  test_tdt.cc
